# cyd-proto

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  berry_generate.py  no_ota.csv  partition.csv  partition_noOta.csv  partitions.csv  platformio.ini  readme.md  sdkconfig.cyd  sdkconfig.defaults  verbose.txt
.cursor/plans/: windows_95_icon_system_37de0896.plan.md
.github/workflows/: ci.yml
components/berry_lang/: CMakeLists.txt
data/berry/: autoexec.be
data/berry/apps/: display_settings.be  features.be  file_manager.be  info.be  log_viewer.be  paint.be  rgb_led.be  sensors.be  taskbar.be  wifi.be
include/: lv_conf.h
src/: CMakeLists.txt  config.h  cydConfig.h  idf_component.yml  main.cpp  mime.h
src/ActionRegistry/: ActionRegistry.cpp  ActionRegistry.h  FeatureAction.h
src/CommandInterpreter/: CommandInterpreter.cpp  CommandInterpreter.h  CommandParser.h  CustomCommand.h
src/FeatureRegistry/: Feature.h  FeatureRegistry.cpp  FeatureRegistry.h  registeredFeatures.cpp  registeredFeatures.h
src/FeatureRegistry/Features/: Logging.cpp  Logging.h  OTA.cpp  OTA.h  SerialRead.cpp  SerialRead.h  SystemFeatures.cpp  SystemFeatures.h  Time.cpp  Time.h  getHallSensorValueCommand.cpp  getHallSensorValueCommand.h  getLightSensorValueCommand.cpp  getLightSensorValueCommand.h  i2c.cpp  i2c.h  infoCustomCommand.cpp  infoCustomCommand.h  rgbLedCommand.cpp  rgbLedCommand.h  wifiCommand.cpp  wifiCommand.h
src/FeatureRegistry/Features/Berry/: BerryApp.h  BerryFeature.cpp  BerryFeature.h  BerryUIBindings.cpp  BerryUIBindings.h
src/FeatureRegistry/Features/LittleFsManagement/: LittleFsManagement.cpp  LittleFsManagement.h  formatCustomCommand.cpp  formatCustomCommand.h  showFileListCustomCommand.cpp  showFileListCustomCommand.h
src/FeatureRegistry/Features/SdCard/: SdCardFeature.cpp  SdCardFeature.h
src/FeatureRegistry/Features/UI/: ActionQueue.cpp  ActionQueue.h  App.h  BuiltinIcons.h  Calibration.h  Desktop.h  IconRenderer.h  LovyanGFX_ILI9341_Settings.h  Renderer.h  Theme.h  UITaskQueue.cpp  UITaskQueue.h  UiFeature.cpp  UiFeature.h  WindowManager.cpp  WindowManager.h  calibrateCustomCommand.h  clearScreenCustomCommand.h  cydConfig.h  helloCustomCommand.h  rotateScreenCommand.h  screenCustomCommand.cpp  screenCustomCommand.h  screens.cpp  screens.h  uiPageCustomCommand.cpp  uiPageCustomCommand.h
src/FeatureRegistry/Features/UI/apps/: DisplaySettingsApp.h  FeaturesApp.h  FileManagerApp.h  InfoApp.h  LogViewerApp.h  PaintApp.h  RgbLedApp.h  SensorsApp.h  WifiApp.h
src/FeatureRegistry/Features/UI/elements/: button.h  checkbox.h  combobox.h  container.h  error_popup.h  filelistview.h  groupbox.h  icon.h  keyboard.h  label.h  menubar.h  menuitem.h  popup.h  radiobutton.h  scrollable.h  startmenu.h  tabs.h  taskbar.h  textfield.h  window.h
src/FeatureRegistry/Features/UI/pages/: rgbled.h  welcome.h
src/FeatureRegistry/Features/UI/screens/: rgbled.h  welcome.h
src/api/: list.cpp  list.h  upload.cpp  upload.h
src/berry/: be_modtab.c  be_port.c  berry_conf.h
src/fs/: LittleFsInit.h  VirtualFS.h
src/hw/: LovyanGFX_ILI9341_Settings.h  RgbLed.h  Screen.cpp  Screen.h  WiFi.cpp  WiFi.h  lightSensor.h
src/services/: WebServer.cpp  WebServer.h  WebSocketServer.cpp  WebSocketServer.h
src/utils/: CJsonHelper.h  JsonMerge.h  MultipartParser.h  StringUtil.h  System.h
test/test_command_parser/: test_command_parser.cpp
